# dofbot_webapp

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: controller.rs  test.py
src/app/controller/: structs.rs
src/app/py/: control.py  control_pose.py  state.py  trajectory.py
src/views/: contacts.html  index.html  layout.html
